# KissDatasetGenerator

./: CMakeLists.txt  README.md  extractorPaperDataset.txt
modellists/: circuits.txt  extractorPaperDataset.txt  longcircuits.txt  madapCircuits.txt  madapCircuitsInReal.txt  neisModelList.txt
src/: eisdataset.h  eisgendata.cpp  eisgendata.h  filterdata.h  hash.cpp  hash.h  log.cpp  log.h  main.cpp  options.h  parameterregressiondataset.cpp  parameterregressiondataset.h  ploting.cpp  ploting.h  randomgen.cpp  randomgen.h  test.cpp  tokenize.cpp  tokenize.h
src/datasets/: dirloader.cpp  dirloader.h  eisdataset.cpp  eisdataset.h  eisgendata.cpp  eisgendata.h  eisgendatanoise.cpp  eisgendatanoise.h  parameterregressiondataset.cpp  parameterregressiondataset.h  passfaildataset.h  tarloader.cpp  tarloader.h
